# TailoredResumeAssistant

./: .dockerignore  .gitignore  Makefile  README.md
frontend/: package-lock.json  package.json
infra/: amdgpu-llm.Dockerfile  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile  llama-load-test.py
tailored-resume-assistant-backend/: pyproject.toml
tailored-resume-assistant-backend/tailored_resume_assistant_backend/: main.py  model.py  tasks.py
