[tool.poetry]
name = "tailored-resume-assistant-backend"
version = "0.1.0"
description = ""
authors = ["Drew Paettie <cazlo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
celery = "^5.4.0"

# sqlalchemy = "^2.0.35"
#asyncpg = "^0.29.0"
#fastapi-pagination = "^0.12.31"
sqlmodel = "^0.0.22"
fastapi-pagination = "^0.12.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts] todo these go to dockerfile cmd
#start-api = "uvicorn tailored_resume_assistant_backend.main:app --reload"
#start-prod = "uvicorn tailored_resume_assistant_backend.main:app --workers=8"